@userDashboard: +carousel overflow fix +fix spacing between Shipment and Most used Contacts
Former-commit-id: 3eb86a52d1b392defc870d2c9e3ec93826f7c885

--- a/client/app/components/Admin/AdminDashboard.scss
+++ b/client/app/components/Admin/AdminDashboard.scss
@@ -29,9 +29,6 @@
         right: 0;
         z-index: 5;
     }
-    .dashboard_main .dashboard_top .left .overlay{
-        // position: absolute;
-    }
     .welcome {
         position: absolute;
         top: 10px;
